...
import { HomeEmptyState } from '@/features/home/components/home-empty-state';
import { HomeHeader } from '@/features/home/components/home-header';

export default function HomeScreen() {
  const activeList = useActiveListStore((state) => state.activeList);
  return (
    <View testID="home-screen" className="flex-1 bg-white">
      <HomeHeader />
      <ScrollView
        className="flex-1"
        showsVerticalScrollIndicator={false}
        contentContainerClassName="gap-[22px] p-[22px] pb-[100px]"
      >
...
